// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Elements/Button Dangerous Button 1`] = `
<button
  className="font-sans transition text-lg px-4 py-2 cursor-pointer focus-offset bg-white border border-red-500 text-red-500 hover:bg-red-500 hover:bg-opacity-10"
  type="button"
  variant="dangerous"
>
  I am a dangerous button
</button>
`;

exports[`Storyshots UI Elements/Button Dangerous Disabled Button 1`] = `
<button
  className="font-sans transition cursor-default text-lg px-4 py-2 bg-white border border-red-300 text-red-300"
  disabled={true}
  type="button"
  variant="dangerous"
>
  I am a dangerous disabled button
</button>
`;

exports[`Storyshots UI Elements/Button Default Button 1`] = `
<button
  className="font-sans transition text-lg px-4 py-2 cursor-pointer focus-offset bg-white border border-blue-500 text-blue-500 hover:bg-blue-500 hover:bg-opacity-10"
  type="button"
>
  I am a button
</button>
`;

exports[`Storyshots UI Elements/Button Default Disabled Button 1`] = `
<button
  className="font-sans transition cursor-default text-lg px-4 py-2 bg-white border border-gray-400 text-gray-400"
  disabled={true}
  type="button"
>
  I am a default disabled button
</button>
`;

exports[`Storyshots UI Elements/Button Primary Button 1`] = `
<button
  className="font-sans transition text-lg px-4 py-2 cursor-pointer focus-offset bg-blue-500 text-white hover:opacity-60"
  type="button"
  variant="primary"
>
  I am a primary button
</button>
`;

exports[`Storyshots UI Elements/Button Primary Disabled Button 1`] = `
<button
  className="font-sans transition cursor-default text-lg px-4 py-2 bg-gray-200 text-gray-400"
  disabled={true}
  type="button"
  variant="primary"
>
  I am a primary disabled button
</button>
`;

exports[`Storyshots UI Elements/Button Text Button 1`] = `
<button
  className="font-sans transition text-base px-0 py-0 cursor-pointer focus-offset bg-transparent text-blue-500 border-none hover:opacity-60 underline"
  type="button"
  variant="text"
>
  I am a text button
</button>
`;

exports[`Storyshots UI Elements/Button Text Disabled Button 1`] = `
<button
  className="font-sans transition cursor-default text-base px-0 py-0 text-gray-300"
  disabled={true}
  type="button"
  variant="text"
>
  I am a text disabled button
</button>
`;
